# BoardPilot

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial_schema.py  0002_source_artifact_content.py  0003_log_source_content.py  0004_flex_chunk_embed_vec.py  0004_flexible_chunk_embedding_vectors.py  0005_source_version_error.py  0005_source_version_error_message.py  0006_ocr_result_status.py
api/app/: main.py
api/app/answers/: citation.py  service.py  sufficiency.py
api/app/core/: config.py  security.py
api/app/db/: base.py  repositories.py  session.py  store.py
api/app/eval/: failure_categories.py  metrics.py  runs.py  seeds.py
api/app/ingestion/: chunking.py  jobs.py  queue.py  tasks.py
api/app/ingestion/parsers/: csv_faq.py  image_stub.py  markdown.py  pdf.py  text_log.py  webpage.py
api/app/models/: orm.py  schemas.py
api/app/products/: service.py
api/app/providers/: base.py  cohere.py  config_store.py  embedding.py  fake.py  llm.py  ocr.py  openai_compatible.py  reranker.py
api/app/retrieval/: catalog.py  entity_extraction.py  evidence.py  filter_plan.py  keyword.py  merge.py  query_normalization.py  rerank.py  service.py  vector.py
api/app/review/: routing.py  service.py
api/app/sources/: service.py
api/app/storage/: base.py  local.py
api/app/tests/: test_api.py  test_db_schema.py  test_deployment_contract.py  test_provider_contracts.py  test_retrieval.py
api/app/workers/: ingestion_worker.py
(+28 files in other folders)
